# axion

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-web.sh
docs/: .gitignore  bootstrap.js  index.html  style.css
docs/pkg/: README.md  axion.d.ts  axion.js  axion_bg.wasm  axion_bg.wasm.d.ts  package.json
proptest-regressions/: ball_trail.txt  game.txt
src/: ball_trail.rs  cli_renderer.rs  entity.rs  game.rs  lib.rs  main.rs  renderer.rs  web_main.rs  web_renderer.rs
www/: .gitignore  bootstrap.js  index.html
