[package]
name = "axion"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"

# CLI-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.28"

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "KeyboardEvent",
    "Performance",
    "console",
    "EventTarget",
    "Element",
    "HtmlElement",
    "CssStyleDeclaration",
    "TouchEvent",
    "TouchList",
    "Touch",
    "Navigator",
] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
proptest = "1.0"

[lib]
name = "axion"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "axion-cli"
path = "src/main.rs"
